<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PracticalTest02</string>
    <string name="server">SERVER</string>
    <string name="server_port">Port</string>
    <string name="connect">Connect</string>
    <string name="client">CLIENT</string>
    <string name="client_address">Address</string>
    <string name="client_port">Port</string>
    <string name="city">City</string>
    <string name="information_type">Information Type</string>    
    <string name="get_weather_forecast">Get Weather Forecast</string>
    <string name="action_settings">Settings</string>
    <string-array name="information_types">
	    <item>set</item>
	    <item>reset</item>
	    <item>poll</item>
  </string-array>

</resources>
