<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ro.pub.cs.systems.pdsd.practicaltest02.graphicuserinterface.PracticalTest02MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/server" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">
        
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        
	        <EditText
	            android:id="@+id/server_port_edit_text"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/server_port" />
        
        </ScrollView>
        
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        
	        <Button
	            android:id="@+id/connect_button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:text="@string/connect" />
        
        </ScrollView>
        
    </LinearLayout>
    
    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/client" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">
        
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        
            <EditText
                android:id="@+id/client_address_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/client_address" />
        
        </ScrollView>
        
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        
            <EditText
                android:id="@+id/client_port_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/client_port" />
        
        </ScrollView>
        
    </LinearLayout>    
    
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3" >

        <Spinner
            android:id="@+id/information_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:entries="@array/information_types" />

        <Button
            android:id="@+id/get_weather_forecast_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="right|top"
            android:layout_row="2"
            android:text="Send" />


        <EditText
            android:id="@+id/city_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:ems="5"
            android:hint="Hour" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="114dp"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_row="0"
            android:ems="10"
            android:hint="Minute" />

    </GridLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    
	    <TextView
	        android:id="@+id/weather_forecast_text_view"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:singleLine="false"
	        android:maxLines="10" />
    
    </ScrollView>

</LinearLayout>
